feat(uimodule): convert cookie banner to a pluggable UI module
- Refactored cookie banner feature to use a pluggable orchestrator + UI pattern
- Moved logic to CookieBannerOrchestrator, accepting a uiComponent override prop
- Provided AntDesignCookieBanner as an example custom UI, injected via module system
- CustomCookieBanner module now wires orchestrator with UI override
- Ensures core logic and state are separated from presentation

--- a/packages/frontend-framework/package.json
+++ b/packages/frontend-framework/package.json
@@ -110,6 +110,7 @@
     "./userMenu": "./dist/components/header/userMenu.js",
     "./cookieBanner": "./dist/components/cookie/cookieBanner.js",
     "./defaultContentSelectionElement": "./dist/components/content/defaultContentSelectionElement.js",
+    "./makeStyles": "./dist/components/content/style_options/makeStyles.js",
     "./imprint": "./dist/components/imprint/imprintText.js",
     "./legalDocument": "./dist/components/imprint/legalDocument.js",
     "./privacyPolicy": "./dist/components/imprint/privacyPolicyText.js",
@@ -233,6 +234,9 @@
       ],
       "./imprint": [
         "./dist/components/imprint/imprintText.d.ts"
+      ],
+      "./makeStyles": [
+        "./dist/components/content/style_options/makeStyles.d.ts"
       ],
       "./legalDocument": [
         "./dist/components/imprint/legalDocument.d.ts"
